--- a/popup.html
+++ b/popup.html
@@ -106,7 +106,7 @@
       </h1>
     </div>
     <div class="modal-content">
-      <p>Some sites I frequently visit</p>
+      <p>Some websites I frequently visit</p>
     </div>
     <div class="modal-icons">
       <div class="flex-container">
